--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,27 @@
-<h1>Cody Dzierzon</h1>
+<h1>Welcome to CSE Motors!</h1>
+<section class="car-main">
+    <img src="../public/images/vehicles/delorean-tn.jpg">
+    <sdiv class="brief-description">
+        <h2>DMC Delorean</h2>
+        <p>3 Cup holders</p>
+        <p>Superman doors</p>
+        <p>Fuzzy dice!</p>
+    </sdiv>
+</section>
+<section class="car-info">
+<div class="car-upgrades">
+    <h2>Delorean Upgrades</h2>
+    <!-- grid -->
+</div>
+<div class="reviews">
+    <h2>DMC Delorean Reviews</h2>
+    <ul>
+        <li>"So fast it's almost like traveling in time." (4/5)</li>
+        <li>"Coolest ride on the road." (4/5)</li>
+        <li>"I'm feeling McFly!" (5/5)</li>
+        <li>"The most futuristic ride of our day" (4.4/5)</li>
+        <li>"80's livin and I love it!" (5/5)</li>
+    </ul>
+</div>
+</section>
+
