--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,3 +4,152 @@
 *:after {
   box-sizing: border-box;
 }
+
+#top-header {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+#top-header .siteName a {
+  text-decoration: none;
+  color: black;
+  font-size: 34px;
+  padding-left: 10px;
+}
+
+#top-header #tools a {
+  text-decoration: none;
+  color: black;
+  font-size: 14px;
+  padding-right: 10px;
+}
+
+nav {
+  background-color: black;
+  color: white;
+  height: 45px;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+  text-align: center;
+}
+
+h1 {
+  padding: 1rem;
+  margin: 0;
+}
+
+.car-main {
+  position: relative;
+  max-width: 100%;
+  overflow: hidden;
+  min-height: 300px;
+}
+
+.car-main img {
+  width: 100%;
+  display: block;
+}
+
+.brief-description {
+  position: absolute;
+  top: 10%;
+  left: 5%;
+  background: rgba(195, 195, 195, 0.6);
+  color: hsl(0, 0%, 0%);
+  padding: 1rem;
+  border-radius: 5px;
+  max-width: 50%;
+}
+
+.car-info {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.reviews {
+  background: white;
+  padding: 1rem;
+  margin-left: 20px;
+  margin-right: 20px;
+  max-width: 90%;
+  min-width: 70%;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.reviews ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.reviews li {
+  padding: 0.5rem;
+  border-bottom: 1px solid #ddd;
+}
+
+
+.car-upgrades {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  padding: 1rem;
+}
+
+.car-upgrades h2 {
+  grid-column: 1/3;
+}
+
+.car-upgrades figure {
+  background: white;
+  padding: 1rem;
+  border-radius: 5px;
+  width: 100%;
+  margin: 0;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.car-upgrades img {
+  width: 100%;
+  max-width: 200px;
+  display: block;
+  margin: 0 auto;
+}
+
+@media (min-width: 508px) {
+  .car-info {
+      display: flex;
+      justify-content: space-between;
+      max-width: 90%;
+      margin: auto;
+      flex-direction: row;
+  }
+  .reviews {
+    flex: 1;
+    max-width: 45% !important;
+  }
+
+  .car-upgrades {
+    flex: 1;
+    max-width: 45% !important;
+  }
+  
+}
