--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,33 @@
 <h1>Welcome to CSE Motors!</h1>
 <section class="car-main">
-    <img src="../public/images/vehicles/delorean-tn.jpg">
+    <img src="../public/images/vehicles/delorean.jpg" alt="delorean">
     <sdiv class="brief-description">
         <h2>DMC Delorean</h2>
         <p>3 Cup holders</p>
         <p>Superman doors</p>
         <p>Fuzzy dice!</p>
+        <button>Own Today</button>
     </sdiv>
 </section>
 <section class="car-info">
 <div class="car-upgrades">
     <h2>Delorean Upgrades</h2>
-    <!-- grid -->
+    <figure>
+        <img src="../public/images/upgrades/flux-cap.png" alt="flux-capacitor">
+        <figcaption>Flux Capacitor</figcaption>
+    </figure>
+    <figure>
+        <img src="../public/images/upgrades/flame.jpg" alt="flame">
+        <figcaption>Flame Decals</figcaption>
+    </figure>
+    <figure>
+        <img src="../public/images/upgrades/bumper_sticker.jpg" alt="bumper-stickers">
+        <figcaption>Bumper Stickers</figcaption>
+    </figure>
+    <figure>
+        <img src="../public/images/upgrades/hub-cap.jpg" alt="hub-cap">
+        <figcaption>Hub Caps</figcaption>
+    </figure>
 </div>
 <div class="reviews">
     <h2>DMC Delorean Reviews</h2>
