--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <h1>Welcome to CSE Motors!</h1>
 <section class="car-main">
-    <img src="../public/images/vehicles/delorean.jpg" alt="delorean">
+    <img src="/images/vehicles/delorean.jpg" alt="delorean">
     <sdiv class="brief-description">
         <h2>DMC Delorean</h2>
         <p>3 Cup holders</p>
@@ -13,19 +13,19 @@
 <div class="car-upgrades">
     <h2>Delorean Upgrades</h2>
     <figure>
-        <img src="../public/images/upgrades/flux-cap.png" alt="flux-capacitor">
+        <img src="/images/upgrades/flux-cap.png" alt="flux-capacitor">
         <figcaption>Flux Capacitor</figcaption>
     </figure>
     <figure>
-        <img src="../public/images/upgrades/flame.jpg" alt="flame">
+        <img src="/images/upgrades/flame.jpg" alt="flame">
         <figcaption>Flame Decals</figcaption>
     </figure>
     <figure>
-        <img src="../public/images/upgrades/bumper_sticker.jpg" alt="bumper-stickers">
+        <img src="/images/upgrades/bumper_sticker.jpg" alt="bumper-stickers">
         <figcaption>Bumper Stickers</figcaption>
     </figure>
     <figure>
-        <img src="../public/images/upgrades/hub-cap.jpg" alt="hub-cap">
+        <img src="/images/upgrades/hub-cap.jpg" alt="hub-cap">
         <figcaption>Hub Caps</figcaption>
     </figure>
 </div>
