--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,6 @@
 <h1>Welcome to CSE Motors!</h1>
+<%- messages() %>
+
 <section class="car-main">
     <img src="/images/vehicles/delorean.jpg" alt="delorean">
     <sdiv class="brief-description">
