--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,4 +5,6 @@
     <title><%- title %> | CSE 340 App</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/inventory-styles.css">
+    <link rel="stylesheet" href="/css/login-styles.css">
+    <script src="/js/password.js" defer></script>
 </head>
