--- a/public/css/login-styles.css
+++ b/public/css/login-styles.css
@@ -84,3 +84,8 @@ input:required:invalid, input:focus:invalid {
 input:required:valid {
     border-color: green;
 }
+
+.notice {
+    text-align: left;
+    color: rgb(213, 0, 0);
+}
