--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -4,7 +4,15 @@
       res.redirect('/')
 } %>
 
-<%- messages() %>
+<% if (errors) { %>
+    <ul class="notice">
+    <% errors.array().forEach(error => { %>
+        <% if (error.msg != "Invalid value") { %>
+            <li><%= error.msg %></li>
+        <% } %>
+    <%  }) %>
+    </ul>
+<% } %>
 
 <form id="registerForm" action="/account/register" method="post">
     <div class="text-info">
@@ -13,17 +21,17 @@
 
     <div class="form-group">
         <label for="firstNameInput">First Name</label>
-        <input type="text" id="firstNameInput" class="input-field" name="account_firstname" required />
+        <input type="text" id="firstNameInput" class="input-field" name="account_firstname" value="<%= account_firstname || '' %>" required />
     </div>
 
     <div class="form-group">
         <label for="lastNameInput">Last Name</label>
-        <input type="text" id="lastNameInput" class="input-field" name="account_lastname" required />
+        <input type="text" id="lastNameInput" class="input-field" name="account_lastname" value="<%= account_lastname || '' %>" required />
     </div>
 
     <div class="form-group">
         <label for="emailInput">Email</label>
-        <input type="email" id="emailInput" class="input-field" name="account_email" placeholder="Enter a valid email address" required />
+        <input type="email" id="emailInput" class="input-field" name="account_email" value="<%= account_email || '' %>" placeholder="Enter a valid email address" required />
     </div>
 
     <div class="form-group">
