--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -142,6 +142,11 @@ h1 {
   display: block;
   margin: 0 auto;
 }
+
+#vehicle-management {
+  list-style: none;
+  text-align: left;
+}
  
 
 @media (min-width: 508px) {
