added account view

--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -6,7 +6,7 @@
 
 <%- messages() %>
 
-<form id="loginForm">
+<form id="loginForm" action="/account/login" method="post">
     <div class="form-group">
         <label for="emailInput">Email</label>
         <input type="email" id="emailInput" class="input-field" name="account_email" required />
