--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -10,3 +10,13 @@
     <li><a href="/inv/add-classification">Add New Classification</a></li>
     <li><a href="/inv/add-vehicle">Add New Vehicle</a></li>
 </ul>
+
+<h2>Manage Inventory</h2>
+<p>Choose a classification to see those inventory items.</p>
+<%- classificationSelect %>
+
+<table id="inventoryDisplay"></table>
+
+<noscript>Javascript must be enabled to use this page.</noscript>
+
+<script src="../../js/inventory.js"></script>
