--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -13,7 +13,7 @@
 
 <h2>Manage Inventory</h2>
 <p>Choose a classification to see those inventory items.</p>
-<%- classificationSelect %>
+<%- dropdown %>
 
 <table id="inventoryDisplay"></table>
 
