--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -166,6 +166,11 @@ h1 {
   padding: 3px;
 }
 
+.account-page {
+  text-align: left;
+  margin-left: 30px;
+}
+
 @media (min-width: 508px) {
   .car-info {
       display: flex;
