--- a/views/account/account.ejs
+++ b/views/account/account.ejs
@@ -5,3 +5,14 @@
 } %>
 
 <%- messages() %>
+
+<% if (accountData) { %>
+    <h2 class="account-page">Welcome <%= accountData.account_firstname %></h2>
+
+    <p class="account-page"><a href="/account/update/<%= accountData.account_id %>">Update Account Information</a></p>
+
+    <% if (accountData.account_type === "Employee" || accountData.account_type === "Admin") { %>
+      <h3 class="account-page">Inventory Management</h3>
+      <p class="account-page"><a href="/inv/">Manage Inventory</a></p>
+    <% } %>
+<% } %>
