--- a/public/css/login-styles.css
+++ b/public/css/login-styles.css
@@ -66,7 +66,7 @@ select {
 }
 
 .signup-link:hover {
-    ext-decoration: underline;
+    text-decoration: underline;
 }
 
 #pswrdBtn {
@@ -81,7 +81,7 @@ select {
 }
 
 input:required:invalid, input:focus:invalid {
-    border-color: none;
+    /* border-color: none; */
 }
 
 input:required:valid {
