--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,13 +3,13 @@
 
 <section class="car-main">
     <img src="/images/vehicles/delorean.jpg" alt="delorean">
-    <sdiv class="brief-description">
+    <div class="brief-description">
         <h2>DMC Delorean</h2>
         <p>3 Cup holders</p>
         <p>Superman doors</p>
         <p>Fuzzy dice!</p>
         <button>Own Today</button>
-    </sdiv>
+    </div>
 </section>
 <section class="car-info">
 <div class="car-upgrades">
